--- a/style.css
+++ b/style.css
@@ -1,14 +1,30 @@
+
 body {
   background-color: #7A7776;
+  /*
   display: flexbox;
   justify-content: center;
   height: 100%;
+  width: 80%
+  */
+}
+
+header {
+  width: 100%;
+}
+
+main{
+  width: 80%;
+  display: flexbox;
+  flex-direction: column-reverse;
+  background-color: burlywood;
+  float: right;
 }
 
 #header {
   background-color: aqua;
   width: 100%;
-  height: 100%;
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -42,11 +58,11 @@ body {
 
 #lotto {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   background-color: gray;
-  width: 800px;
-  height: 300px;
+  width: 100%;
+  height: 120px;
 }
 
 #lotto .ball {
@@ -54,8 +70,22 @@ body {
   display: flex;
   justify-content: center;
   align-items:center;
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
   border-radius: 100%;
   font-size: 30px;
+}
+
+.sidebar{
+  background-color: lime;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 19%;
+  height: 400px;
+  position: fixed;
+}
+
+li{
+  margin-left: 5px;
 }
