--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
   background-color: #7A7776;
+
   /*
   display: flexbox;
   justify-content: center;
@@ -29,6 +30,13 @@ main{
   justify-content: center;
   align-items: center;
   color: black;
+}
+
+#day{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
 }
 
 #clock{
@@ -79,6 +87,7 @@ main{
 .sidebar{
   background-color: lime;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 19%;
